buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'eclipse'

version = '2.0.0'
group = 'com.foxyas.changed_addon'
archivesBaseName = 'changed_addon'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: 'official', version: '1.18.2'

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                changed_addon {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                changed_addon {
                    source sourceSets.main
                }
            }
        }
    }
}

mixin {
    env {
        remapRefMap = true
    }
}

repositories {
	// Mod Location
    flatDir {
        dirs 'libs'
    }

    maven {
        url "https://cursemaven.com"
    }

    maven {
        name = "Changed"
        url = "https://raw.githubusercontent.com/LtxProgrammer/Changed-Minecraft-Mod/master/mcmodsrepo/"
    }
  /* maven {
        // location of the maven that hosts JEI files
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }*/
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.2.21' //Forge Version
    implementation fg.deobf("net.ltxprogrammer.changed:Changed-m1.18.2-f40.2.0:v0.13.1") //Changed
    implementation fg.deobf("curse.maven:advanced-xray-256256:3712732")	//Xray Ores
    implementation fg.deobf("curse.maven:lightspeedmod-821790:4594803") //Speed Up The Start of The Game
    implementation fg.deobf("curse.maven:forge-carpet-547361:3930877") //Player Summon
    implementation fg.deobf("curse.maven:rubidium-574856:4494903") //Fps Bost 
    implementation fg.deobf("curse.maven:oculus-581495:4578744") //Shaders :D
    implementation fg.deobf("curse.maven:custom-player-models-439870:4840534") //Custom Player Models
  //implementation fg.deobf("curse.maven:roughly-enough-items-310111:4774383") //Jei But better
  //implementation fg.deobf("curse.maven:cloth-config-348521:4633387") // REI mod dependence
  //implementation fg.deobf("curse.maven:architectury-api-419699:4521465") //REI mod dependence
    implementation fg.deobf("curse.maven:spark-361579:4505375") // Spark
    implementation fg.deobf("curse.maven:hardcore-revival-274036:3830873") //HardCore Survival
    implementation fg.deobf("curse.maven:balm-531761:4442615") //Balm API need for HardCore Survival
    implementation fg.deobf("curse.maven:appleskin-248787:4770822") //AppleSkin
    implementation fg.deobf("curse.maven:catalogue-459701:3803098") //Catalogue (Better Mod menu)
    implementation fg.deobf("curse.maven:configured-457570:4462832") //Configured (Confing options in game)
    implementation fg.deobf("curse.maven:carry-on-274259:5141758") //Carry On mod
    implementation fg.deobf("curse.maven:in-game-account-switcher-232676:4589915") //ReAuth
    

    //compileOnly fg.deobf("mezz.jei:jei-1.18.2:9.7.2.281:api") //Jei Api
    //runtimeOnly fg.deobf("mezz.jei:jei-1.18.2:9.7.2.281") //Jei Mod
    //implementation files("libs/Changed-m1.18.2-v0.14")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

apply from: 'mcreator.gradle'